.provarCaches/00D410000011HE0EAM/objects/rstk__plmappmfg__c.object
<CustomObject>
    <description>plmappmfg__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__plmappmfg_plmitem__r.Name+&quot;-&quot;+rstk__plmappmfg_mfgname__c, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmappmfg_mfgid__c</fullName>
        <label>Manufacturer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmappmfg_mfgitem__c</fullName>
        <label>Manufacturer Item No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmappmfg_mfgname__c</fullName>
        <label>Manufacturer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmappmfg_plmitem__c</fullName>
        <label>PLM Import Item</label>
        <referenceTo>rstk__plmitem__c</referenceTo>
        <relationshipLabel>PLM Import Approved Manufacturers</relationshipLabel>
        <relationshipName>plmappmfgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PLM Import Approved Manufacturer</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Import Approved Manufacturers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>